--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 </head>
 <body>
     <div class="container">
+        <span>Teste</span>
         <div class="box">
         <figure>
             <img class="logo" src="qoma-logo.png" alt="logo">
